# wttr.mcp

./: README.md  main.py  pyproject.toml  test.py
src/wttr_mcp/: server.py
